fix: overflow on marquee element removed

--- a/FashionFrame-Blog/src/styles/SongSelector.css
+++ b/FashionFrame-Blog/src/styles/SongSelector.css
@@ -16,7 +16,6 @@
 
 .marquee {
   white-space: nowrap;
-  overflow: hidden;
   display: block;
   animation: marquee 10s linear infinite;
 }
